✨ feat(数据库操作升级改造): 封装关于db操作的统一方法api，兼容原来的调用方式
